--- a/index.html
+++ b/index.html
@@ -19,40 +19,40 @@
     </header>
 
     <main>
-      <section class="content">
-        <section class="hero">
+      <div class="content">
+        <div class="hero">
           <img class="hero_image" src="images/desk.jpg" alt="desk with laptop and coffee cup">
-        </section>
-        <section class="featured_work">
-          <h3 class="header_featured_work">MY WORK</h3>
+        </div>
+        <section class="my_work">
+          <h2 class="header_my_work">MY WORK</h2>
           <div class="projects-all">
-            <div class="project1">
+            <article class="project1">
               <img class="project_thumbnail" src="images/santorini.jpg" alt="picture of Santorini at sunset">
               <div class="project_description">
-                <h4 class="project_title">Travel guides</h4>
+                <h3 class="project_title">Travel guides</h3>
                 <p class="snippet_text">As a copywriter for Booking.com, I create inspiring travel guides for destinations worldwide.</p>
               </div>
               <a class="project_link" href="https://www.booking.com/articles.html">Read more</a>
-            </div>
-            <div class="project2">
-              <img class="project_thumbnail" src="images/laptop.jpg" alt="chocolate cake with decorative icing">
+            </article>
+            <article class="project2">
+              <img class="project_thumbnail" src="images/laptop.jpg" alt="laptop screen and steaming cup on a desk">
               <div class="project_description">
-                <h4 class="project_title">Udacity Front-End Developer Scholarship</h4>
+                <h3 class="project_title">Udacity Front-End Developer Scholarship</h3>
                 <p class="snippet_text">Follow my progress in the wonderful world of HTML, CSS and Javascript.</p>
               </div>
               <a class="project_link" href="https://github.com/inafischer">Read more</a>
-            </div>
-            <div class="project3">
+            </article>
+            <article class="project3">
               <img class="project_thumbnail" src="images/guitar.jpg" alt="close-up of an acoustic guitar">
               <div class="project_description">
-                <h4 class="project_title">Music journalism</h4>
+                <h3 class="project_title">Music journalism</h3>
                 <p class="snippet_text">Gig reviews and interviews with my favourite musicians.</p>
               </div>
               <a class="project_link" href="http://www.flickofthefinger.co.uk/author/ina_f">Read more</a>
-            </div>
+            </article>
           </div>
         </section>
-      </section>
+      </div>
     </main>
 </body>
 </html>
