--- a/index.html
+++ b/index.html
@@ -9,46 +9,46 @@
   <body>
 
     <header class="header">
-      <div class="header_inner">
-        <h1 class="header_name">INA FISCHER</h1>
-        <h4 class="header_job">CODING &amp; COPYWRITING</h4>
+      <div class="header-inner">
+        <h1 class="header-name">INA FISCHER</h1>
+        <h4 class="header-job">CODING &amp; COPYWRITING</h4>
       </div>
-      <div class="logo_container">
-        <img class="header_logo" src="images/udacity-logo.png" alt="Udacity logo in light blue">
+      <div class="logo-container">
+        <img class="header-logo" src="images/udacity-logo.png" alt="Udacity logo in light blue">
       </div>
     </header>
 
     <main>
       <div class="content">
         <div class="hero">
-          <img class="hero_image" src="images/desk.jpg" alt="desk with laptop and coffee cup">
+          <img class="hero-image" src="images/desk.jpg" alt="desk with laptop and coffee cup">
         </div>
-        <section class="my_work">
-          <h2 class="header_my_work">MY WORK</h2>
+        <section class="my-work">
+          <h2 class="header-my-work">MY WORK</h2>
           <div class="projects-all">
             <article class="project1">
-              <img class="project_thumbnail" src="images/santorini.jpg" alt="picture of Santorini at sunset">
-              <div class="project_description">
-                <h3 class="project_title">Travel guides</h3>
-                <p class="snippet_text">As a copywriter for Booking.com, I create inspiring travel guides for destinations worldwide.</p>
+              <img class="project-thumbnail" src="images/santorini.jpg" alt="picture of Santorini at sunset">
+              <div class="project-description">
+                <h3 class="project-title">Travel guides</h3>
+                <p class="snippet-text">As a copywriter for Booking.com, I create inspiring travel guides for destinations worldwide.</p>
               </div>
-              <a class="project_link" href="https://www.booking.com/articles.html">Read more</a>
+              <a class="project-link" href="https://www.booking.com/articles.html">Read more</a>
             </article>
             <article class="project2">
-              <img class="project_thumbnail" src="images/laptop.jpg" alt="laptop screen and steaming cup on a desk">
-              <div class="project_description">
-                <h3 class="project_title">Udacity Front-End Developer Scholarship</h3>
-                <p class="snippet_text">Follow my progress in the wonderful world of HTML, CSS and Javascript.</p>
+              <img class="project-thumbnail" src="images/laptop.jpg" alt="laptop screen and steaming cup on a desk">
+              <div class="project-description">
+                <h3 class="project-title">Udacity Front-End Developer Scholarship</h3>
+                <p class="snippet-text">Follow my progress in the wonderful world of HTML, CSS and Javascript.</p>
               </div>
-              <a class="project_link" href="https://github.com/inafischer">Read more</a>
+              <a class="project-link" href="https://github.com/inafischer">Read more</a>
             </article>
             <article class="project3">
-              <img class="project_thumbnail" src="images/guitar.jpg" alt="close-up of an acoustic guitar">
-              <div class="project_description">
-                <h3 class="project_title">Music journalism</h3>
-                <p class="snippet_text">Gig reviews and interviews with my favourite musicians.</p>
+              <img class="project-thumbnail" src="images/guitar.jpg" alt="close-up of an acoustic guitar">
+              <div class="project-description">
+                <h3 class="project-title">Music journalism</h3>
+                <p class="snippet-text">Gig reviews and interviews with my favourite musicians.</p>
               </div>
-              <a class="project_link" href="http://www.flickofthefinger.co.uk/author/ina_f">Read more</a>
+              <a class="project-link" href="http://www.flickofthefinger.co.uk/author/ina_f">Read more</a>
             </article>
           </div>
         </section>
